# flight_agent

./: .env.example  .gitignore  ARM_CONVERSION_CHANGES.md  ARM_TABLET_CONVERSION_SUMMARY.md  BUILD_STATUS.md  CONVERSION_SUCCESS_REPORT.md  Dockerfile.arm_simple  Dockerfile.arm_tablet  Dockerfile.voice_flight_arm64  FINAL_SUMMARY.md  LICENSE  README.md  TESTING_GUIDE.md  VOICE_TESTING_DEMO.md  VOICE_TO_FLIGHT_ARM64_GUIDE.md  VOICE_TO_TEXT_TESTING_GUIDE.md  WINDOWS_VTT_TESTING.md  flight_search.py  flight_search_mcp.py  flight_search_tablet.py  flight_search_vtt.py  requirements.txt  requirements_termux.txt  setup_android_arm_tablet.ps1  test_mcp_connection.py  voice_mcp_client.py  voice_to_flight_integrated.py
archive/: QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  VOICE_INTEGRATION_SUMMARY.md  VOICE_SETUP.md  day-1a-from-prompt-to-action.ipynb  day-1b-agent-architectures.ipynb  debug_listen.py  debug_mcp.py  flight_search.py  flight_search_draft.py  flight_search_mcp.py  requirements.md  test_mcp_connection.py  test_voice_only.py  test_voice_setup.sh
voice-to-text-mcp1/: .gitignore  CLAUDE.md  Cargo.toml  README.md
