[package]
name = "voice-to-text-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.2.1", features = ["server", "transport-io"] }
schemars = { version = "0.8", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cpal = "0.16.0"
# Default whisper-rs without CUDA for all platforms
whisper-rs = { version = "0.14.3" }
hound = "3.5"
anyhow = "1.0"
thiserror = "1.0"
gag = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "voice-to-text-mcp"
path = "src/main.rs"


[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
proptest = "1.4"
futures = "0.3"

# Platform-specific acceleration support

# macOS Apple Silicon (ARM64) - Metal and CoreML acceleration
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
whisper-rs = { version = "0.14.3", features = ["metal", "coreml"] }

# macOS Intel (x86_64) - Metal acceleration only (CoreML requires Apple Silicon)
[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
whisper-rs = { version = "0.14.3", features = ["metal"] }

# Linux x86_64 - CUDA support
[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
whisper-rs = { version = "0.14.3", features = ["cuda"] }

# Windows x86_64 - CPU only (CUDA disabled for testing)
# [target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
# whisper-rs = { version = "0.14.3", features = ["cuda"] }

# Linux ARM64 (Raspberry Pi 3/4/5) - CPU only (no CUDA support)
# Uses ARM NEON SIMD instructions for acceleration
[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
whisper-rs = { version = "0.14.3" }

